fix: Remove static export configuration for Vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,3 @@
 {
-  "buildCommand": "npm run build",
-  "outputDirectory": "out",
-  "framework": "nextjs",
-  "rewrites": [
-    {
-      "source": "/api/:path*",
-      "destination": "/api/:path*/index.html"
-    }
-  ]
+  "framework": "nextjs"
 }
